Fixed error, O diagonally didn't work, also tried to fixed animation error on iphone screen in login page

--- a/public/css/login.scss
+++ b/public/css/login.scss
@@ -1,6 +1,7 @@
 @import "shared.scss";
 
 .login {
+  @extend .content;
   h1 {
     margin-bottom: 20px;
   }
