--- a/public/css/waiting.css
+++ b/public/css/waiting.css
@@ -105,6 +105,7 @@ footer {
   margin-top: 5rem;
   background-color: white;
   animation: form-down;
+  animation-iteration-count: 1;
   animation-duration: 0.5s;
   border-radius: 0.8rem;
   padding: 1rem;
